[package]
name = "Netspeed"
version = "0.1.0"
description = "A Tauri based JS,Rust based GUI for netspeed_server_sse "
authors = ["visnk"]
license = "MIT"
repository = "https://github.com/visnkmr/netspeed_pc"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
ns_sse= {path="../speedlib/"}
tauri = { version = "1.2", features = ["process-exit", "shell-open", "window-set-always-on-top", "window-start-dragging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.23"
# prefstore= {git="https://github.com/visnkmr/prefstore.git"}
prefstore= "0.5.0"
human-panic= {git="https://github.com/visnkmr/save-crash-logs-rs.git"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
